--- a/index.html
+++ b/index.html
@@ -12,5 +12,35 @@
         <a class="cta" href="#">Download Excursion (Coming Soon!)</a>
       </p>
     <!-- End of Main Section -->
+
+    <!-- Start of Video -->
+    <video autoplay muted loop>
+      <source src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/videos/excursion.mp4" type="video/mp4">
+    </video>
+    <!-- End of Video -->
+
+    <!-- Start of Second Section -->
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="Campfire"/>
+    </p>
+    <!-- End of Second Section -->
+
+    <!-- Start of Third Section -->
+    <p>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="Campfire"/>
+    </p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p>
+      <a class="cta" href="#">Download Excursion (Coming Soon!)</a>
+    </p>
+    <!-- End of Third Section -->
+
+    <!-- Start of Footer -->
+    <div class="footer">
+      <p>® Excursion</p>
+    </div>
+    <!-- End of Footer -->
   </body>
 </html>
